# dlog

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  agent-first-vcs-design.md  install.sh
.github/workflows/: ard-validate.yml  ci.yml  pages.yml  release.yml
docs/: index.html
docs/.well-known/: ai-catalog.json
openspec/: config.yaml
openspec/changes/ard-discovery/: design.md  proposal.md  tasks.md
openspec/changes/context-compression/: design.md  proposal.md  tasks.md
openspec/changes/distribution/: design.md  proposal.md  tasks.md
scripts/ard/: README.md  ai-catalog.schema.json  validate_catalog.py
src/: anchor.rs  cli.rs  lib.rs  main.rs  model.rs  output.rs  resolve.rs  schema.sql  store.rs
src/commands/: bind.rs  commit.rs  compact.rs  context.rs  hooks.rs  invariants.rs  mod.rs  record.rs  search.rs  show.rs  status.rs  trace.rs  why.rs
templates/: AGENTS.md
