[package]
name = "dlog"
version = "0.2.0"
edition = "2024"
description = "Agent-first decision log that sits alongside Git"
license = "MIT"
repository = "https://github.com/nonokia/dlog"
readme = "README.md"
keywords = ["decision-log", "git", "agent", "cli", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
ulid = "1.2.1"
